<resources>
    <string name="app_name">ProductivityApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_todo">Todo List</string>
    <string name="menu_habits">Habit Tracker</string>
    <string name="menu_home">Home</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_logout">Logout</string>
</resources>