<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_action_home"/>

    <item
        android:id="@+id/notes"
        android:title="@string/menu_notes"
        android:icon="@drawable/ic_action_notes"/>

    <item
        android:id="@+id/todo"
        android:title="@string/menu_todo"
        android:icon="@drawable/ic_action_todo"/>

    <item
        android:id="@+id/habits"
        android:title="@string/menu_habits"
        android:icon="@drawable/ic_action_habit"/>

    <item android:title="Other">

        <menu>

            <item
                android:id="@+id/contact"
                android:title="@string/menu_contact"
                android:icon="@drawable/ic_action_contact"/>
            <item
                android:id="@+id/logout"
                android:title="@string/menu_logout"
                android:icon="@drawable/ic_action_logout"/>

        </menu>

    </item>


</menu>